--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- First Grid with login form-->
 <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="wrapper center_box">
-        <form action="">
+        <form action="/login" method="POST">
             <h1>Login</h1>
             <div class="input-box">
             <input type="text" placeholder="Username" required>
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
             </div>
             <div class="input-box">
             <input type="password" placeholder="Password" required>
-            <i class='bx bxs-lock-alt' ></i>
+            <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
             <label><input type="checkbox">Remember Me</label>
