--- a/registerpage.html
+++ b/registerpage.html
@@ -47,7 +47,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
         <div class="wrapper center_box">
             <h2>Register</h2>
-            <form action="#">
+            <form action="register", method="GET" method="POST">
                 <div class="input-box">
                     <label for="firstname">Firstname<font color="#ff0033">*</font></label>
                     <input type="text" id="firstname" name="firstname" placeholder="Firstname" required>
